# student-verification

./: Button.h  CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  Textbox.h  cmake_install.cmake  main  main.cpp
api/: app.js  package.json
api/controller/: index.js
web-frontend/: index.html  package-lock.json  package.json  script.js  style.css
web_api/: README.md  package-lock.json
web_api/database/: db.js
web_api/routes/: router.js
